--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="bloc-chat">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Base Project</title>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
+    <ui-view></ui-view>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <script>
+    // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyDmOKdoMaFqNb-2e818-FFyRp2iP0h_xnc",
+            authDomain: "bloc-chat-7044c.firebaseapp.com",
+            databaseURL: "https://bloc-chat-7044c.firebaseio.com",
+            projectId: "bloc-chat-7044c",
+            storageBucket: "bloc-chat-7044c.appspot.com",
+            messagingSenderId: "1013238894873"
+        };
+    firebase.initializeApp(config);
+    </script>
     <script src="/scripts/app.js"></script>
 </body>
 </html>
