--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html ng-app="bloc-chat">
+<html ng-app="blocChat">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
+    <title>Bloc Chat</title>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
@@ -24,5 +24,7 @@
     firebase.initializeApp(config);
     </script>
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/services/Room.js"></script>
+    <script src="/scripts/controllers/RoomCtrl.js"></script>
 </body>
 </html>
