--- a/app/index.html
+++ b/app/index.html
@@ -30,5 +30,6 @@
     <script src="/scripts/controllers/RoomCtrl.js"></script>
     <script src="/scripts/controllers/ModalCtrl.js"></script>
     <script src="/scripts/controllers/ModalInstanceCtrl.js"></script>
+    <script src="/scripts/services/Message.js"></script>
 </body>
 </html>
