--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     firebase.initializeApp(config);
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
-    <script>"https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"</script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
     <script src="/scripts/app.js"></script>
     <script src="/scripts/services/Room.js"></script>
     <script src="/scripts/controllers/RoomCtrl.js"></script>
